--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -93,9 +93,17 @@
                 <div class="ml-3">
                     <h4 class="text-lg font-medium text-gray-900">This Month's Status</h4>
                     <p class="mt-1 text-gray-700">{{ duesHistory.currentMonthStatus.message }}</p>
-                    <p class="mt-1 text-gray-700"
-                        [ngClass]="{'text-green-500': duesHistory.currentMonthStatus.status === 'paid', 'text-red-500': duesHistory.currentMonthStatus.status === 'unpaid'}">
-                        {{ duesHistory.currentMonthStatus.status }}</p>
+                    <p class="mt-1 text-gray-700 font-bold" [ngClass]="{
+      'text-green-500': duesHistory.currentMonthStatus.status === 'paid',
+      'text-red-500': duesHistory.currentMonthStatus.status === 'unpaid',
+      'text-purple-900': duesHistory.currentMonthStatus.status === 'exempt'
+   }">
+                        {{
+                        duesHistory.currentMonthStatus.status === 'exempt'
+                        ? 'Exempted'
+                        : (duesHistory.currentMonthStatus.status | titlecase)
+                        }}
+                    </p>
                     <div *ngIf="duesHistory.currentMonthStatus.exists"
                         class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-4">
                         <div class="text-sm">
