--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -74,11 +74,19 @@
     </div>
 
     <!-- Results with data -->
-    <div *ngIf="duesHistory && duesHistory.count > 0" class="bg-white rounded-lg shadow-md overflow-hidden">
+    <div *ngIf="duesHistory" class="bg-white rounded-lg shadow-md overflow-hidden">
         <!-- Homeowner info -->
-        <div class="bg-sky-900 text-white p-6">
-            <h3 class="text-xl font-bold">{{ duesHistory.homeowner.name }}</h3>
-            <div class="mt-1 text-indigo-100">Account #: {{ duesHistory.homeowner.accountNumber }}</div>
+        <div class="bg-sky-900 text-white p-6 flex items-center justify-between">
+            <div>
+                <h3 class="text-xl font-bold">{{ duesHistory.homeowner.name }}</h3>
+                <div class="mt-1 text-indigo-100">Account #: {{ duesHistory.homeowner.accountNumber }}</div>
+            </div>
+
+            <button (click)="downloadSOA()" [disabled]="isDownloading"
+                class="px-3 py-1 text-sm bg-white text-black rounded-md shadow hover:bg-sky-700 hover:text-white cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
+                *ngIf="duesHistory">
+                 {{ isDownloading ? 'Downloading...' : 'Download SOA' }}
+            </button>
         </div>
 
         <!-- Current month status -->
@@ -264,7 +272,6 @@
             </div>
         </div>
     </div>
-
 
     <div *ngIf="garbageStatus" class="bg-white rounded-lg shadow-md overflow-hidden mt-8">
         <div class="bg-sky-900 text-white p-6">
