--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -111,7 +111,7 @@
         <div class="mt-6 text-center">
           <p class="text-sm text-gray-600">
             Don't have an account?
-            <a href="#" class="text-sky-600 hover:text-sky-700 font-medium ml-1">Contact Admin</a>
+            <a href="mailto:hoacapstone@gmail.com" class="text-sky-600 hover:text-sky-700 font-medium ml-1">Contact Admin</a>
           </p>
         </div>
       </div>
